--- a/assets/style/layout.scss
+++ b/assets/style/layout.scss
@@ -1,4 +1,26 @@
 /* 
+** Output padding/margin style
+** $type: 'padding/margin' 
+*/
+@mixin Around($type) {
+  &0 {
+    #{$type}: 0px !important;
+  }
+
+  &15 {
+    #{$type}: 15px;
+  }
+
+  &25 {
+    #{$type}: 25px;
+  }
+
+  &35 {
+    #{$type}: 35px;
+  }
+}
+
+/* 
 ** Output directional padding/margin style
 ** $type: 'padding/margin', $direction: 'top/bottom/left/right' 
 */
@@ -65,6 +87,13 @@
 }
 
 /* 
+  Margin-around
+*/
+.m- {
+  @include Around(margin)
+}
+
+/* 
   Margin: Top, Bottom, Left, Right
 */
 .mt- {
@@ -94,6 +123,13 @@
   @include Axis(margin, y)
 }
 
+
+/* 
+  Padding-around
+*/
+.p- {
+  @include Around(padding)
+}
 
 /* 
   Padding: Top, Bottom, Left, Right
@@ -160,7 +196,11 @@ Navbar Padding Fix
    align-items: center;
 
    &-wrap {
-     flex-wrap: wrap;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      align-items: center;
+      flex-wrap: wrap;
    }
 
   //  alignment classes
