--- a/assets/style/font.scss
+++ b/assets/style/font.scss
@@ -1,21 +1,26 @@
+// @import '_variables';
 
 /* 
-** Font sizes
+** Default Root Font Size
 */
-$fontSizes: (
-  'regular': 1rem,
-  'small': 0.9rem,
-  'x-small': 0.7rem,
-  'large': 1.1rem,
-  'x-large': 1.3rem
-);
+
+html {
+  font-size: 14px;
+
+  @media (min-width: 800px) {
+    font-size: 16px;
+  }
+  @media (min-width: 1600px) {
+    font-size: 18px;
+  }
+}
 
 /* 
 ** Font Size Classes
 ** ex: .text-regular
 */
 @each $name, $value in $fontSizes {
-  .text--#{$name} {
-    color: $value
+  .text-#{$name} {
+    font-size: $value;
   }
 }
